Build Ninebot Max G30 companion v0.8.0